# colmap_opengv

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/base/: camera.cc  camera_models.h  camera_models_test.cc  correspondence_graph.cc  cost_functions.h  database.cc  database_cache.cc  essential_matrix.cc  essential_matrix.h  essential_matrix_test.cc  pose.cc  projection.cc  reconstruction.cc  triangulation.cc
src/controllers/: bundle_adjustment.cc  hierarchical_mapper.cc  incremental_mapper.cc  incremental_mapper.h
src/estimators/: absolute_pose_test.cc  pose.cc  pose.h  two_view_geometry.cc  two_view_geometry.h
src/exe/: CMakeLists.txt  image.cc  model.cc  sfm.cc
src/feature/: extraction.cc  matching.cc  sift.h
src/opengv/: CMakeLists.txt
src/opengv/include/opengv/absolute_pose/: AbsoluteAdapterBase.hpp  CentralAbsoluteAdapter.hpp  NoncentralAbsoluteAdapter.hpp  methods.hpp
src/opengv/include/opengv/absolute_pose/modules/: main.hpp  upnp2.hpp  upnp4.hpp
src/opengv/include/opengv/math/: arun.hpp  cayley.hpp  quaternion.hpp
src/opengv/include/opengv/relative_pose/: CentralRelativeAdapter.hpp  CentralRelativeMultiAdapter.hpp  CentralRelativeWeightingAdapter.hpp  MACentralRelative.hpp  MANoncentralRelative.hpp  MANoncentralRelativeMulti.hpp  NoncentralRelativeAdapter.hpp  NoncentralRelativeMultiAdapter.hpp  RelativeAdapterBase.hpp  RelativeMultiAdapterBase.hpp  methods.hpp
src/opengv/include/opengv/relative_pose/modules/: main.hpp
src/opengv/include/opengv/relative_pose/modules/eigensolver/: modules.hpp
src/opengv/include/opengv/relative_pose/modules/fivept_nister/: modules.hpp
src/opengv/include/opengv/relative_pose/modules/fivept_stewenius/: modules.hpp
src/opengv/include/opengv/relative_pose/modules/ge/: modules.hpp
src/opengv/include/opengv/relative_pose/modules/sixpt/: modules.hpp
src/opengv/include/opengv/sac/: Lmeds.hpp  Ransac.hpp  SampleConsensusProblem.hpp
src/opengv/include/opengv/sac/implementation/: Ransac.hpp
src/opengv/include/opengv/sac_problems/absolute_pose/: AbsolutePoseSacProblem.hpp
src/opengv/include/opengv/sac_problems/relative_pose/: CentralRelativePoseSacProblem.hpp  EigensolverSacProblem.hpp  NoncentralRelativePoseSacProblem.hpp
src/opengv/include/opengv/triangulation/: methods.hpp
src/opengv/src/absolute_pose/: CentralAbsoluteAdapter.cpp  NoncentralAbsoluteAdapter.cpp  methods.cpp
src/opengv/src/absolute_pose/modules/: Epnp.cpp  main.cpp  upnp2.cpp  upnp4.cpp
src/opengv/src/absolute_pose/modules/gp3p/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/absolute_pose/modules/gpnp1/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/absolute_pose/modules/gpnp2/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/absolute_pose/modules/gpnp3/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/absolute_pose/modules/gpnp4/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/absolute_pose/modules/gpnp5/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/math/: Sturm.cpp  arun.cpp  cayley.cpp  gauss_jordan.cpp  quaternion.cpp  roots.cpp
src/opengv/src/relative_pose/: CentralRelativeAdapter.cpp  CentralRelativeMultiAdapter.cpp  CentralRelativeWeightingAdapter.cpp  MACentralRelative.cpp  MANoncentralRelative.cpp  MANoncentralRelativeMulti.cpp  NoncentralRelativeAdapter.cpp  NoncentralRelativeMultiAdapter.cpp  methods.cpp
src/opengv/src/relative_pose/modules/: main.cpp
src/opengv/src/relative_pose/modules/eigensolver/: modules.cpp
src/opengv/src/relative_pose/modules/fivept_kneip/: code.cpp  init.cpp  reductors.cpp  spolynomials.cpp
src/opengv/src/relative_pose/modules/fivept_nister/: modules.cpp
src/opengv/src/relative_pose/modules/fivept_stewenius/: modules.cpp
src/opengv/src/relative_pose/modules/ge/: modules.cpp
src/opengv/src/relative_pose/modules/sixpt/: modules2.cpp
src/opengv/src/sac_problems/absolute_pose/: AbsolutePoseSacProblem.cpp
src/opengv/src/sac_problems/relative_pose/: CentralRelativePoseSacProblem.cpp  EigensolverSacProblem.cpp  NoncentralRelativePoseSacProblem.cpp
src/opengv/src/triangulation/: methods.cpp
src/optim/: bundle_adjustment.cc  loransac.h  ransac.h
src/sfm/: incremental_mapper.cc  incremental_mapper.h  incremental_triangulator.cc  incremental_triangulator.h
src/ui/: feature_matching_widget.cc  main_window.cc  reconstruction_options_widget.cc
src/util/: cache.h  math.h  option_manager.cc  types.h
